--- a/template.yml
+++ b/template.yml
@@ -1,30 +1,14 @@
-AWSTemplateFormatVersion: 2010-09-09
-Transform:
-- AWS::Serverless-2016-10-31
-- AWS::CodeStar
+service: myalexaskill
 
-Parameters:
-  ProjectId:
-    Type: String
-    Description: CodeStar projectId used to associate new resources to team members
+provider:
+  name: aws
+  runtime: python3.6
 
-Resources:
-  HelloWorld:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: index.handler
-      Runtime: python2.7
-      Role:
-        Fn::ImportValue:
-          !Join ['-', [!Ref 'ProjectId', !Ref 'AWS::Region', 'LambdaTrustRole']]
-      Events:
-        GetEvent:
-          Type: Api
-          Properties:
-            Path: /
-            Method: get
-        PostEvent:
-          Type: Api
-          Properties:
-            Path: /
-            Method: post
+plugins:
+  - serverless-python-requirements
+
+functions:
+  bus-schedule:
+    handler: alexa_bus.bus
+    events:
+      - alexaSkill
